bk_ida/gobmkida/c2/gtp_defend_both
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gtp_defend_both/src/interface/play_gtp.c:2046:34: error: use of undeclared identifier 'gtp_print_code_conversion'
gtp_printf( "%d", ( unsigned int)gtp_print_code_conversion[v2]); 
                                 ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gtp_defend_both/src/obj/2/play_gtp.o] Error 1
